add delete category
