# swagger.yaml
@@ -4,8 +4,6 @@ info:
   description: Backend for creating SPA React Forum
   version: '1.0'
 servers:
-  - url: https://forum-api-jkrop.ondigitalocean.app
-    description: Production environment
   - url: http://localhost:8080
     description: Local environment
 components:
@@ -179,6 +177,21 @@ paths:
                         type: string
         '404':
           description: Sandbox does not exists
+  /category/{categoryId}:
+    delete:
+      summary: Deletes a category
+    parameters:
+        - in: path
+          name: categoryId
+          schema:
+            type: string
+          required: true
+          description: Id for the category to delete
+    responses:
+        '200':
+          description: Category successfully deleted
+        '404':
+          description: Category does not exists
   /category/{categoryId}/thread:
     post:
       summary: Creates a new thread
